--- a/package.json
+++ b/package.json
@@ -13,9 +13,10 @@
 	"dependencies": {
 		"dotenv": "^16.1.4",
 		"express": "^4.18.2",
-		"sequelize": "^6.32.0",
+		"joi": "^17.9.2",
 		"pg": "^8.11.0",
 		"pg-hstore": "^2.3.4",
+		"sequelize": "^6.32.0",
 		"ts-node": "^10.9.1"
 	},
 	"devDependencies": {
